# CS2-Calculator-Omar_Hamdy

./: CMakeLists.txt  README.md
include/: calculator.h  shunting.h
mybuild/: CMakeCache.txt
src/: calculator.cpp  shunting.cpp
test/: shunt-test.cpp  test.cpp
tests/: shunt-test.cpp  test.cpp
